--- a/cameraview-master/demo/src/main/res/menu/main.xml
+++ b/cameraview-master/demo/src/main/res/menu/main.xml
@@ -14,27 +14,32 @@
 
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
 
     <item
         android:id="@+id/aspect_ratio"
         android:icon="@mipmap/menu1"
         android:title="@string/aspect_ratio"
-        app:showAsAction="ifRoom"
-
+        app:showAsAction="always"
         />
 
     <item
         android:id="@+id/switch_flash"
         android:icon="@mipmap/ic_flash_auto"
         android:title="@string/flash_auto"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"
+        />
+    <item
+        android:id="@+id/pencil_draw"
+        android:icon="@mipmap/pencil"
+        android:title="@string/draw_line"
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/switch_camera"
         android:icon="@mipmap/ic_switch_camera"
         android:title="@string/switch_camera"
-        app:showAsAction="ifRoom"/>
-
+        app:showAsAction="always"/>
 </menu>
