--- a/cameraview-master/demo/src/main/res/values/colors.xml
+++ b/cameraview-master/demo/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
     <color name="lightpink">#D500F9</color>
     <color name="black">#000000</color>
     <color name="red">#cc1812</color>
+    <color name="yellow">#ffff00</color>
 </resources>
