--- a/cameraview-master/demo/src/main/res/layout/activity_draw.xml
+++ b/cameraview-master/demo/src/main/res/layout/activity_draw.xml
@@ -1,13 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="100"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/activity_main"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:weightSum="100"
     >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/back_btn"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_margin="10dp"
+            android:background="@mipmap/back"/>
+
+
+        <TextView
+            android:id="@+id/text_t"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="그림판"
+           android:layout_gravity="center"
+           android:textSize="20dp"
+           android:layout_marginLeft="120dp"
+           />
+
+        <Button
+            android:id="@+id/save_btn"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="100dp"
+            android:layout_toRightOf="@+id/text_t"
+            android:background="@mipmap/save"/>
+
+    </LinearLayout>
+
+    <View
+        android:layout_margin="5dp"
+        android:layout_width="500dp"
+        android:layout_height="3dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:background="#BBBBBB"  />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,11 +58,38 @@
         android:paddingTop="4dp">
 
         <Button
+            android:id="@+id/c_red"
+            android:layout_marginLeft="20dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@color/red"
+            />
+
+        <Button
+            android:id="@+id/c_orange"
+            android:layout_marginLeft="20dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@color/lightorange"
+            android:layout_toRightOf="@+id/c_red"
+            />
+
+        <Button
+            android:id="@+id/c_yellow"
+            android:layout_marginLeft="20dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@color/yellow"
+            android:layout_toRightOf="@+id/c_orange"
+            />
+
+        <Button
             android:layout_marginLeft="15dp"
             android:id="@+id/c_green"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@color/lightgreen"
+            android:layout_toRightOf="@+id/c_yellow"
             />
 
         <Button
@@ -31,22 +100,16 @@
             android:background="@color/colorPrimary"
             android:layout_toRightOf="@+id/c_green"
             />
-        <Button
-            android:id="@+id/c_orange"
-            android:layout_marginLeft="20dp"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@color/lightorange"
-            android:layout_toRightOf="@+id/c_blue"
-            />
+
         <Button
             android:id="@+id/c_lavanda"
             android:layout_marginLeft="20dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@color/lavanda"
-            android:layout_toRightOf="@+id/c_orange"
+            android:layout_toRightOf="@+id/c_blue"
             />
+
         <Button
             android:id="@+id/c_pink"
             android:layout_marginLeft="20dp"
@@ -55,31 +118,26 @@
             android:background="@color/lightpink"
             android:layout_toRightOf="@+id/c_lavanda"
             />
-        <Button
-            android:id="@+id/c_pastel"
-            android:layout_marginLeft="20dp"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@color/pastel"
-            android:layout_toRightOf="@+id/c_pink"
-            />
+
+
         <Button
             android:id="@+id/c_black"
             android:layout_marginLeft="20dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@color/black"
-            android:layout_toRightOf="@+id/c_pastel"
+            android:layout_toRightOf="@+id/c_pink"
             />
-        <Button
-            android:id="@+id/c_red"
-            android:layout_marginLeft="20dp"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@color/red"
-            android:layout_toRightOf="@+id/c_black"
-            />
+
     </RelativeLayout>
+
+    <View
+        android:layout_margin="5dp"
+        android:layout_width="500dp"
+        android:layout_height="3dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:background="#BBBBBB" />
 
     <Viewer.DrawLine
         android:id="@+id/drwLine"
@@ -90,11 +148,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="50dp"
         android:layout_weight="5">
+
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_width="348dp"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"/>
     </LinearLayout>
+
+
 </LinearLayout>
