--- a/cameraview-master/demo/src/main/res/layout/activity_preview.xml
+++ b/cameraview-master/demo/src/main/res/layout/activity_preview.xml
@@ -29,6 +29,7 @@
             android:id="@+id/preview_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="10dp"
             />
     </LinearLayout>
     <LinearLayout
