--- a/cameraview-master/demo/src/main/res/layout/custom_layout.xml
+++ b/cameraview-master/demo/src/main/res/layout/custom_layout.xml
@@ -26,5 +26,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        app:srcCompat="@mipmap/ic_flash_off" />
+        app:srcCompat="@mipmap/flash_off" />
 </LinearLayout>
