--- a/cameraview-master/demo/src/main/res/layout/activity_viewpager.xml
+++ b/cameraview-master/demo/src/main/res/layout/activity_viewpager.xml
@@ -10,7 +10,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="190dp"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"/>
 
     <LinearLayout
